# kbase_db_api

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  TODO.md  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_lambda.txt  template.yml
.github/workflows/: python-app.yml
alembic/: README  env.py
alembic/versions/: 04a5bea10ab5_initial_migration.py  184607398420_add_entities_and_entity_mentions.py  777fcf6e5a81_initial_migration.py  9d89078eb639_initial_migration.py  f186678ab376_initial_migration.py
cloudformation/: DEPLOYMENT.md  dbapi_lambda.yml  rds-postgres.yml  roles.yml  s3.yml
cloudformation/lightsail/: DEPLOYMENT.md  dbapi_lambda.yml  roles.yml
data/20201022-NCBI-disease-corpus/: README.md  load_ncbi_disease_corpus_mentions.ipynb
data/cord/: README.md  load_cord.py  load_data.py
data/podcasts/Python_Bytes/: 20201205_etl_episodes.ipynb  20201205_explore.ipynb  20201220-fetch-episode-transcript.ipynb  README.md
data/podcasts/Talk_Python_To_Me/: README.md
data/pubmed/: README.md  load_pubmed.py  test_pubmed.ipynb
data/speed_test/: README.md  post.lua
db_api/: crud.py  database.py  main.py  models.py  schemas.py
db_api/core/: config.py  security.py
notebooks/: 20200106_machine_tokens.ipynb  20201012_scispacy_ner.ipynb  20201025_ner_render.ipynb  20201106-re.ipynb  20201117-question-answering-transformers-examples.ipynb  20201122-mlflow_serving.ipynb  20201229-auth_test.ipynb  20210218_summarization.ipynb  nb_utils.py
results/20200706-cord-github/: find_github.ipynb
source/: requirements.txt
source/cloudformation/: DEPLOYMENT.md  README.md  dbapi_lambda.yml  rds-postgres.yml  roles.yml  users-developers.yml
source/db_api/: crud.py  database.py  init_data.py  main.py  models.py  schemas.py
source/db_api/api/: deps.py
source/db_api/api/api_v1/: api.py
source/db_api/api/api_v1/endpoints/: documents.py  entities.py  entity_mentions.py  login.py  ner_evaluations.py  user_ratings.py  users.py
source/db_api/core/: config.py  security.py
source/db_api/crud/: __init__.py  crud_documents.py  crud_entities.py  crud_entity_mentions.py  crud_ner_evaluations.py  crud_user_ratings.py  crud_users.py
source/tests/: conftest.py  test_main.py  utils.py
tests/: test_crud.py  test_main.py
