[tool.poetry]
name = "kbase_db_api"
version = "0.1.0"
description = ""
authors = ["Alexander Junge <alexander.junge@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.12.0"
typer = "^0.3.0"
python-dotenv = "^0.12.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
mangum = "^0.9.0"
lxml = "4.4.1"
httpx = "^0.13.0"
fastapi = "^0.54.0"
email-validator = "^1.0.0"
alembic = "^1.3.0"
pandas = "^1.1.4"
kindred = "^2.7.2"
beautifulsoup4 = "^4.9.3"
arrow = "^0.17.0"
python-jose = {extras = ["cryptography"], version = "^3.2.0"}
python-multipart = "^0.0.5"
cryptography = "^3.4.5"
SQLAlchemy = "1.4.11"
asyncpg = "^0.22.0"

[tool.poetry.dev-dependencies]
spacy = "^2.3.2"
scispacy = "^0.3.0"
pre-commit = "^2.9.0"
jupyterlab = "^2.1.5"
flake8 = "^3.8.3"
en-ner-craft-md = {url = "https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.3.0/en_ner_craft_md-0.3.0.tar.gz"}
en-ner-bc5cdr-md = {url = "https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.3.0/en_ner_bc5cdr_md-0.3.0.tar.gz"}
black = "^19.10b0"
pytest = "^6.1.2"
torch = "^1.7.0"
transformers = "^3.5.1"
ipywidgets = "^7.5.1"
boto3 = "^1.16.25"
mlflow = "1.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
